# rimca-core

./: Cargo.toml
src/librimca/: Cargo.toml
src/librimca/src/: auth.rs  download.rs  error.rs  lib.rs  state.rs
src/librimca/src/fabric/: mod.rs
src/librimca/src/vanilla/: api.rs  mod.rs  models.rs
src/nizziel/: Cargo.toml
src/rimca/: Cargo.toml
src/rimca/src/: main.rs  test.rs
