[package]
name = "librimca"
version = "0.2.1"
authors = ["liabri"]
edition = "2021"

[lib]
name = "rimca"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = [ "derive" ] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
nizziel = { git = "https://github.com/liabri/nizziel" }
sha-1 = "0.10.1"
thiserror = "1.0.36"
tokio = "1.35.1"
log = "0.4.20"

oauth2 = "4.4.2"
url = "2.5.0"
opener = "0.6.1"

zip = "0.5.13"